Modules test fixed